[gd_scene load_steps=6 format=2]

[ext_resource path="res://art_exports/ui_battle/ui_tower_sizeemblem.png" type="Texture" id=1]
[ext_resource path="res://art_exports/ui_battle/ui_tower_durabilityemblem.png" type="Texture" id=2]
[ext_resource path="res://art_exports/ui_battle/ui_tower_speedemblem.png" type="Texture" id=3]
[ext_resource path="res://font/default_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://dungeon/ShieldBonusIcons.gd" type="Script" id=5]

[node name="ShieldBonusIcons" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 37.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ShieldSizeIcon" type="TextureRect" parent="HBoxContainer/MarginContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 50, 51 )
texture = ExtResource( 1 )
expand = true

[node name="ShieldSizeLabel" type="Label" parent="HBoxContainer"]
margin_left = 34.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_left = 47.0
margin_right = 77.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ShieldSpeedIcon" type="TextureRect" parent="HBoxContainer/MarginContainer3"]
margin_right = 30.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 50, 51 )
texture = ExtResource( 3 )
expand = true

[node name="ShieldSpeedLabel" type="Label" parent="HBoxContainer"]
margin_left = 81.0
margin_top = 3.0
margin_right = 90.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 94.0
margin_right = 124.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ShieldStrengthIcon" type="TextureRect" parent="HBoxContainer/MarginContainer2"]
margin_right = 30.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 50, 51 )
texture = ExtResource( 2 )
expand = true

[node name="ShieldStrengthLabel" type="Label" parent="HBoxContainer"]
margin_left = 128.0
margin_top = 3.0
margin_right = 137.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
valign = 1
